--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
 	<groupId>com.thjug.bgile</groupId>
 	<artifactId>bgile</artifactId>
-	<version>1.1.4-beta</version>
+	<version>1.1.6-beta</version>
 	<packaging>war</packaging>
 
-	<name>Bgile</name>
+	<name>Bgileboard</name>
 
 	<organization>
-		<name>Bgile</name>
-		<url>http://bgile.thjug.com</url>
+		<name>Bgileboard</name>
+		<url>http://bgileboard.com</url>
 	</organization>
 
 	<developers>
@@ -225,6 +225,38 @@
 
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.10</version>
+				<configuration>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<stopKey>foo</stopKey>
+					<stopPort>9999</stopPort>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start-jetty</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<scanIntervalSeconds>0</scanIntervalSeconds>
+							<daemon>true</daemon>
+						</configuration>
+					</execution>
+					<execution>
+						<id>stop-jetty</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 			<plugin>
 				<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
 				<artifactId>maven-java-formatter-plugin</artifactId>
